# deep-context

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  plan.md  pyproject.toml  test_flow_identifier.py
src/: __init__.py  config.py
src/agents/: __init__.py  discover_agent.py  discovery_agent.py  main.py
src/agents/action/: __init__.py  agent.py  architecture.md  client_add.md  flow.md  models.py  prompt.md  test_action_agent.py  tools.py
src/agents/discovery/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  agent.py  prompts.py  types.py
src/agents/executor/: agent.py
src/agents/flow_identifier/: README.md  __init__.py  agent.py  metadata_requester.py  metadata_validator.py  prompts.py  types.py
src/agents/indexer/: agent.py
src/agents/orchestrator/: README.md  __init__.py  agent.py  run.py  types.py
src/agents/planner/: agent.py
src/agents/scribe/: __init__.py  agent.py  flow_parser.py  prompts.py  types.py
src/agents/verifier/: agent.py
src/common/: config.py  logger.py
src/deep_context.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/executor/: __init__.py
src/indexer/: __init__.py
src/retrieval/: __init__.py
