[project]
name = "deep-context"
version = "0.1.0"
description = "A Python agent project for creating Documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.23.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
]

[tool.uv]
# optimal settings for uv
package = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
